src/OpenGl/OpenGl_LayerList.cxx
@@ -21,6 +21,7 @@
 
 #include <OpenGl_LayerList.hxx>
 #include <OpenGl_Structure.hxx>
+#include <OpenGl_Workspace.hxx>
 
 #include <InterfaceGraphic_Graphic3d.hxx>
 #include <InterfaceGraphic.hxx>
@@ -279,14 +280,22 @@ void OpenGl_LayerList::ChangeLayer (const OpenGl_Structure *theStructure,
 
 void OpenGl_LayerList::Render (const Handle(OpenGl_Workspace) &theWorkspace) const
 {
+  OpenGl_GlobalLayerSettings aDefaultSettings;
+  
+  glGetIntegerv (GL_DEPTH_FUNC, &aDefaultSettings.DepthFunc);
+  glGetBooleanv (GL_DEPTH_WRITEMASK, &aDefaultSettings.DepthMask);
+
   OpenGl_SequenceOfLayers::Iterator anIts;
-  for(anIts.Init (myLayers); anIts.More (); anIts.Next ())
+  for (anIts.Init (myLayers); anIts.More(); anIts.Next())
   {
     const OpenGl_Layer& aLayer = anIts.Value ();
     if (aLayer.PriorityList().NbStructures () > 0)
     {
       // render layer
-      aLayer.Render (theWorkspace);
+      aLayer.Render (theWorkspace, aDefaultSettings);
     }
   }
+
+  glDepthMask (aDefaultSettings.DepthMask);
+  glDepthFunc (aDefaultSettings.DepthFunc);
 }
